add some drivers of on memory data structures

--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,8 @@
 {deps, [
-        {stats, ".*", {git, "git://github.com/dizzyd/stats.git", "HEAD"}},
-        {ibrowse, ".*", {git, "git://github.com/dizzyd/ibrowse.git", "HEAD"}},
-        {casbench, "0.1", {git, "git://github.com/basho/casbench", "HEAD"}},
-        {riakc, ".*", {git, "git://github.com/basho/riak-erlang-client", "HEAD"}}
+        {stats, ".*", {git, "https://github.com/dizzyd/stats.git", "HEAD"}},
+        {ibrowse, ".*", {git, "https://github.com/dizzyd/ibrowse.git", "HEAD"}},
+        {casbench, "0.1", {git, "https://github.com/basho/casbench", "HEAD"}},
+        {riakc, ".*", {git, "https://github.com/basho/riak-erlang-client", "HEAD"}}
        ]}.
 
 {escript_incl_apps, [stats, ibrowse, riakc, protobuffs]}.
